turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:6: error: missing arguments for method avance in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
		avance; recule; droite (1);
                ^Source:6: error: missing arguments for method recule in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
		avance; recule; droite (1);
                        ^